# Global-Jump-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  agent.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py  pagination.py  router.py
app/core/: config.py  countries.py  encryption.py  exceptions.py  file_storage.py  logging.py  observability.py  rate_limit.py  security.py  visa_types.py
app/db/: base.py  base_model.py  session.py
app/middleware/: request_context.py
app/models/: __init__.py  activity_log.py  advisor_availability.py  advisor_bookmark.py  advisor_credential.py  advisor_lead.py  advisor_matching_weights.py  advisor_profile.py  assessment.py  assessment_ab_variant.py  assessment_threshold.py  booking.py  message.py  (+15 more)
migrations/: env.py
scripts/: create_admin.py  docker-entrypoint.sh  fix_advisor_service_enums.py  migrate.sh  seed_ab_variants.py  seed_advisor_analytics.py  seed_advisor_leads.py  seed_advisor_profile_stats.py  seed_advisors.py  seed_ai_analytics.py  seed_assessment_questions.py  seed_assessment_thresholds.py  seed_booking_demo.py  seed_conversations.py  seed_customer_documents.py  seed_finance_analytics.py  seed_overview_analytics.py  seed_seekers.py  seed_support_tickets.py  seed_verification_queue.py  test_payment_flow.py  wait_for_db.sh
tests/: conftest.py  test_admin_finance.py  test_advisor_admin.py  test_advisor_bookings.py  test_advisor_credentials.py  test_advisor_flow.py  test_advisor_leads.py  test_advisor_profile.py  test_advisor_search.py  test_ai_insights.py  test_analytics.py  test_assessment_analytics.py  test_assessment_thresholds.py  test_assessments.py  test_auth.py  test_availability.py  test_bookings.py  test_conversations.py  test_dashboard.py  test_eligibility_rules.py  test_health.py  test_pagination.py  test_payments.py  test_payouts.py  test_reviews.py  test_seeker_admin.py  test_seeker_documents.py  test_seeker_profile.py  test_support_tickets.py  test_uploads.py  test_user_admin.py
(+140 files in other folders)
