[project]
name = "Fastapi-App"
version = "0.1.0"
description = "Production-grade FastAPI boilerplate for the VisaConnect / globlejump backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "starlette>=1.2.1",
    "fastapi-mail>=1.6.4",
    "jinja2>=3.1.6",
    "cryptography>=43.0.0",
    "aiofiles>=24.1.0",
    "boto3>=1.43.36",
    "stripe>=7.0.0",
    "openai>=1.60.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "asgi-lifespan>=2.1.0",
    "aiosqlite>=0.20.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in argument defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_decorators = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.bandit]
# The pre-commit hook passes --severity-level medium and excludes test files.
exclude_dirs = [".venv", "migrations", "tests"]

